applications/scratch-4600133/deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: scratch-4600133
  namespace: scratch

spec:
  replicas: 1

  selector:
    matchLabels:
      app: scratch-4600133

  template:
    metadata:
      labels:
        app: scratch-4600133

    spec:
      containers:
      - name: scratch-4600133
        image: scratch:latest

        ports:
        - containerPort: 80
