applications/scratch-4600133/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: scratch-4600133
  namespace: scratch

spec:
  selector:
    app: scratch-4600133

  ports:
  - port: 80
    targetPort: 80

  type: ClusterIP
