applications/scratch-4600133/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: scratch-4600133
  namespace: scratch

spec:
  ingressClassName: traefik

  rules:
  - host: scratch-4600133.lab.local

    http:
      paths:
      - path: /

        pathType: Prefix

        backend:
          service:
            name: scratch-4600133

            port:
              number: 80
